# sea-g2p

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/sea_g2p/: normalizer.py
python/sea_g2p/vi_cleaner/: __init__.py  datestime.py  misc.py  num2vi.py  numerical.py  symbols.py  technical.py  units.py  vi_resources.py
scripts/: benchmark.py
src/: lib.rs
src/g2p/: mod.rs
src/sea_g2p/: g2p.py  normalizer.py
src/sea_g2p/cleaner/: __init__.py  datestime.py  numerical.py  text_norm.py
tests/: test_bilingual_phonemize.py  test_normalize.py  test_phonemize.py
