[package]
name = "sea-g2p-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "sea_g2p_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
regex = "1.10"
once_cell = "1.19"
memmap2 = "0.9"
unicode-normalization = "0.1"

[build-dependencies]
pyo3-build-config = "0.23"
