[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project]
name = "sea-g2p"
version = "0.3.2"
description = "Fast multilingual text-to-phoneme converter for South East Asian languages."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = [
    "text-to-speech",
    "tts",
    "vietnamese",
    "g2p",
    "phonemizer",
    "speech-synthesis",
    "real-time",
    "on-device",
    "south-east-asia"
]
authors = [
    { name = "Phạm Nguyễn Ngọc Bảo", email = "pnnbao@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "phonemizer>=3.3.0",
]

[project.urls]
"Homepage" = "https://github.com/pnnbao97/sea-g2p"
"Repository" = "https://github.com/pnnbao97/sea-g2p"
"Bug Tracker" = "https://github.com/pnnbao97/sea-g2p/issues"
"Documentation" = "https://github.com/pnnbao97/sea-g2p/blob/main/README.md"
"Source Code" = "https://github.com/pnnbao97/sea-g2p"
"Changelog" = "https://github.com/pnnbao97/sea-g2p/releases"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sea_g2p*"]

[tool.setuptools.package-data]
sea_g2p = ["phone_dict/*.db"]
